# django-base

./: .cursorrules  .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  Procfile  README.md  USAGE.md  build-web.sh  build-worker.sh  build.sh  manage.py  mypy.ini  package.json  pyproject.toml  pytest.ini  render.yaml
.github/workflows/: ci.yml  test.yml
base/: adapter.py  admin.py  components.py  constants.py  factories.py  fields.py  filters.py  forms.py  logging.py  middleware.py  models.py  permissions.py  selectors.py  services.py  tasks.py  urls.py  utils.py  views.py
base/frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.js
base/migrations/: 0001_initial.py  0001_squashed_20230708.py  0002_user_email_history.py  0003_emailmessage_reply_to.py  0004_auto_20220906_1722.py  0004_auto_20220906_1822.py  0005_user_uuid.py  0006_auto_20221030_2351.py  0007_alter_user_uuid.py  0008_auto_20221101_1523.py  0009_auto_20221101_1605.py  0010_auto_20221101_1645.py  0011_orgs.py  0012_auto_20230317_2021.py  0013_emailmessage_org.py  0014_auto_20230322_0050.py  (+12 more)
config/: celery.py  urls.py
core/: adapter.py  admin.py  apps.py  backends.py  components.py  constants.py  exceptions.py  filters.py  forms.py  middleware.py  mixins.py  models.py  permissions.py  selectors.py  services.py  tasks.py  types.py  urls.py  utils.py  views.py
frontend/: .gitignore  components.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.mjs
requirements/: common.txt  local.txt  production.txt  test.txt
(+292 files in other folders)
