[project]
name = "django-base"
version = "0.1.0"
description = "This repository is used as a template repository that can be cloned for any new Django project."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.11",
    "celery>=5.5.3",
    "django>=5.2.5",
    "django-environ>=0.12.0",
    "django-extensions>=4.1",
    "django-storages>=1.14.6",
    "django-vite>=3.1.0",
    "gunicorn>=23.0.0",
    "inertia-django>=1.2.0",
    "psycopg[binary]>=3.2.9",
    "python-postmark>=0.6.1",
    "pytz>=2025.2",
    "redis>=6.4.0",
    "requests>=2.32.4",
    "sentry-sdk>=2.35.0",
    "whitenoise>=6.9.0",
]

[dependency-groups]
dev = [
    "django-check-html-middleware>=2021.10.1",
    "django-debug-toolbar>=6.0.0",
    "django-stubs>=5.2.2",
    "faker>=37.5.3",
    "freezegun>=1.5.5",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-django>=4.11.1",
    "pytest-playwright>=0.7.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.12.9",
    "types-pytz>=2025.2.0.20250809",
    "types-requests>=2.32.4.20250809",
    "werkzeug>=3.1.3",
]

[tool.ruff.lint]
ignore = ["F403", "F405"]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "config.settings.test"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
FAIL_INVALID_TEMPLATE_VARS = true
python_files = ["test*.py"]
addopts = "--reuse-db --create-db"
